Fix dummy eccodes build job

--- a/.github/workflows/upstream-ci.yml
+++ b/.github/workflows/upstream-ci.yml
@@ -16,7 +16,9 @@ jobs:
   eccodes:
     if: ${{ inputs.ecbuild }}
     name: eccodes
-    run: echo "Pretending to build eccodes"
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "Pretending to build eccodes"
 
   pgen:
     needs: [eccodes]
