--- a/.github/workflows/upstream-ci.yml
+++ b/.github/workflows/upstream-ci.yml
@@ -28,8 +28,9 @@ jobs:
     needs: [eccodes]
     if: |
       always() &&
+      !inputs.metkit &&
       (needs.eccodes.result == 'success' || needs.eccodes.result == 'skipped')
-    name: eccodes
+    name: metkit
     runs-on: ubuntu-latest
     uses: ecmwf-enterprise-sandbox/metkit/.github/workflows/ci.yml@reusable-ci
     with:
