--- a/.github/workflows/upstream-ci-hpc.yml
+++ b/.github/workflows/upstream-ci-hpc.yml
@@ -6,7 +6,19 @@ on:
       eccodes:
         required: false
         type: string
+      eckit:
+        required: false
+        type: string
       metkit:
+        required: false
+        type: string
+      atlas:
+        required: false
+        type: string
+      mir:
+        required: false
+        type: string
+      pgen:
         required: false
         type: string
 
@@ -17,9 +29,15 @@ jobs:
     uses: ecmwf-enterprise-sandbox/eccodes/.github/workflows/reusable-ci-hpc.yml@upstream-ci-hpc
     secrets: inherit
 
+  eckit:
+    name: eckit
+    if: ${{ inputs.eckit }}
+    uses: ecmwf-enterprise-sandbox/eckit/.github/workflows/reusable-ci-hpc.yml@upstream-ci-hpc
+    secrets: inherit
+
   metkit:
     # needs eccodes and eckit to complete first, always() ensures that it will run regardless of whether they were successfull and at least one job in needs was successful, or the inputs.metkit is populated
-    needs: [eccodes]
+    needs: [eccodes, eckit]
     if: ${{ always() && (contains(join(needs.*.result, ','), 'success') || inputs.metkit) }}
     name: metkit
     uses: ecmwf-enterprise-sandbox/metkit/.github/workflows/reusable-ci-hpc.yml@upstream-ci-hpc
@@ -27,4 +45,41 @@ jobs:
       metkit: ${{ inputs.metkit || 'ecmwf-enterprise-sandbox/metkit@upstream-ci-hpc' }}
       eckit: ${{ inputs.eckit }}
       eccodes: ${{ inputs.eccodes }}
+    secrets: inherit
+
+  atlas:
+    needs: [eckit]
+    if: ${{ always() && (contains(join(needs.*.result, ','), 'success') || inputs.atlas) }}
+    name: atlas
+    uses: ecmwf-enterprise-sandbox/atlas/.github/workflows/reusable-ci-hpc.yml@upstream-ci-hpc
+    with:
+      atlas: ${{ inputs.atlas || 'ecmwf-enterprise-sandbox/atlas@upstream-ci-hpc' }}
+      eckit: ${{ inputs.eckit }}
+    secrets: inherit
+
+  mir:
+    needs: [metkit, atlas]
+    if: ${{ always() && (contains(join(needs.*.result, ','), 'success') || inputs.mir) }}
+    name: mir
+    uses: ecmwf-enterprise-sandbox/mir/.github/workflows/reusable-ci-hpc.yml@upstream-ci-hpc
+    with:
+      mir: ${{ inputs.mir || 'ecmwf-enterprise-sandbox/mir@upstream-ci-hpc' }}
+      eccodes: ${{ inputs.eccodes }}
+      eckit: ${{ inputs.eckit }}
+      metkit: ${{ inputs.metkit }}
+      atlas: ${{ inputs.atlas }}
+    secrets: inherit
+
+  pgen:
+    needs: [mir]
+    if: ${{ always() && (contains(join(needs.*.result, ','), 'success') || inputs.pgen) }}
+    name: pgen
+    uses: ecmwf-enterprise-sandbox/pgen/.github/workflows/reusable-ci-hpc.yml@upstream-ci-hpc
+    with:
+      pgen: ${{ inputs.pgen || 'ecmwf-enterprise-sandbox/pgen@upstream-ci-hpc' }}
+      eccodes: ${{ inputs.eccodes }}
+      eckit: ${{ inputs.eckit }}
+      metkit: ${{ inputs.metkit }}
+      atlas: ${{ inputs.atlas }}
+      mir: ${{ inputs.mir }}
     secrets: inherit
