--- a/.github/workflows/upstream-ci-hpc.yml
+++ b/.github/workflows/upstream-ci-hpc.yml
@@ -29,15 +29,15 @@ jobs:
     uses: ecmwf-enterprise-sandbox/eccodes/.github/workflows/reusable-ci-hpc.yml@upstream-ci-hpc
     secrets: inherit
 
-  eckit:
-    name: eckit
-    if: ${{ inputs.eckit }}
-    uses: ecmwf-enterprise-sandbox/eckit/.github/workflows/reusable-ci-hpc.yml@upstream-ci-hpc
-    secrets: inherit
+  # eckit:
+  #   name: eckit
+  #   if: ${{ inputs.eckit }}
+  #   uses: ecmwf-enterprise-sandbox/eckit/.github/workflows/reusable-ci-hpc.yml@upstream-ci-hpc
+  #   secrets: inherit
 
   metkit:
     # needs eccodes and eckit to complete first, always() ensures that it will run regardless of whether they were successfull and at least one job in needs was successful, or the inputs.metkit is populated
-    needs: [eccodes, eckit]
+    needs: [eccodes]
     if: ${{ always() && (contains(join(needs.*.result, ','), 'success') || inputs.metkit) }}
     name: metkit
     uses: ecmwf-enterprise-sandbox/metkit/.github/workflows/reusable-ci-hpc.yml@upstream-ci-hpc
@@ -47,18 +47,18 @@ jobs:
       eccodes: ${{ inputs.eccodes }}
     secrets: inherit
 
-  atlas:
-    needs: [eckit]
-    if: ${{ always() && (contains(join(needs.*.result, ','), 'success') || inputs.atlas) }}
-    name: atlas
-    uses: ecmwf-enterprise-sandbox/atlas/.github/workflows/reusable-ci-hpc.yml@upstream-ci-hpc
-    with:
-      atlas: ${{ inputs.atlas || 'ecmwf-enterprise-sandbox/atlas@upstream-ci-hpc' }}
-      eckit: ${{ inputs.eckit }}
-    secrets: inherit
+  # atlas:
+  #   needs: [eckit]
+  #   if: ${{ always() && (contains(join(needs.*.result, ','), 'success') || inputs.atlas) }}
+  #   name: atlas
+  #   uses: ecmwf-enterprise-sandbox/atlas/.github/workflows/reusable-ci-hpc.yml@upstream-ci-hpc
+  #   with:
+  #     atlas: ${{ inputs.atlas || 'ecmwf-enterprise-sandbox/atlas@upstream-ci-hpc' }}
+  #     eckit: ${{ inputs.eckit }}
+  #   secrets: inherit
 
   mir:
-    needs: [metkit, atlas]
+    needs: [metkit]
     if: ${{ always() && (contains(join(needs.*.result, ','), 'success') || inputs.mir) }}
     name: mir
     uses: ecmwf-enterprise-sandbox/mir/.github/workflows/reusable-ci-hpc.yml@upstream-ci-hpc
