--- a/.github/workflows/upstream-ci-hpc.yml
+++ b/.github/workflows/upstream-ci-hpc.yml
@@ -47,15 +47,15 @@ jobs:
       eccodes: ${{ inputs.eccodes }}
     secrets: inherit
 
-  # atlas:
-  #   needs: [eckit]
-  #   if: ${{ always() && (contains(join(needs.*.result, ','), 'success') || inputs.atlas) }}
-  #   name: atlas
-  #   uses: ecmwf-enterprise-sandbox/atlas/.github/workflows/reusable-ci-hpc.yml@upstream-ci-hpc
-  #   with:
-  #     atlas: ${{ inputs.atlas || 'ecmwf-enterprise-sandbox/atlas@upstream-ci-hpc' }}
-  #     eckit: ${{ inputs.eckit }}
-  #   secrets: inherit
+  atlas:
+    needs: [eckit]
+    if: ${{ always() && (contains(join(needs.*.result, ','), 'success') || inputs.atlas) }}
+    name: atlas
+    uses: ecmwf-enterprise-sandbox/atlas/.github/workflows/reusable-ci-hpc.yml@upstream-ci-hpc
+    with:
+      atlas: ${{ inputs.atlas || 'ecmwf-enterprise-sandbox/atlas@upstream-ci-hpc' }}
+      eckit: ${{ inputs.eckit }}
+    secrets: inherit
 
   mir:
     needs: [metkit]
