--- a/.github/workflows/upstream-ci-hpc.yml
+++ b/.github/workflows/upstream-ci-hpc.yml
@@ -70,16 +70,16 @@ jobs:
       atlas: ${{ inputs.atlas }}
     secrets: inherit
 
-  # pgen:
-  #   needs: [mir]
-  #   if: ${{ always() && (contains(join(needs.*.result, ','), 'success') || inputs.pgen) }}
-  #   name: pgen
-  #   uses: ecmwf-enterprise-sandbox/pgen/.github/workflows/reusable-ci-hpc.yml@upstream-ci-hpc
-  #   with:
-  #     pgen: ${{ inputs.pgen || 'ecmwf-enterprise-sandbox/pgen@upstream-ci-hpc' }}
-  #     eccodes: ${{ inputs.eccodes }}
-  #     eckit: ${{ inputs.eckit }}
-  #     metkit: ${{ inputs.metkit }}
-  #     atlas: ${{ inputs.atlas }}
-  #     mir: ${{ inputs.mir }}
-  #   secrets: inherit
+  pgen:
+    needs: [mir]
+    if: ${{ always() && (contains(join(needs.*.result, ','), 'success') || inputs.pgen) }}
+    name: pgen
+    uses: ecmwf-enterprise-sandbox/pgen/.github/workflows/reusable-ci-hpc.yml@upstream-ci-hpc
+    with:
+      pgen: ${{ inputs.pgen || 'ecmwf-enterprise-sandbox/pgen@upstream-ci-hpc' }}
+      eccodes: ${{ inputs.eccodes }}
+      eckit: ${{ inputs.eckit }}
+      metkit: ${{ inputs.metkit }}
+      atlas: ${{ inputs.atlas }}
+      mir: ${{ inputs.mir }}
+    secrets: inherit
