--- a/.github/workflows/upstream-ci.yml
+++ b/.github/workflows/upstream-ci.yml
@@ -18,6 +18,9 @@ on:
       mir:
         required: false
         type: string
+    secrets:
+      PAT:
+        required: true
 
 jobs:
   eccodes:
