--- a/.github/workflows/upstream-ci.yml
+++ b/.github/workflows/upstream-ci.yml
@@ -45,14 +45,14 @@ jobs:
       eckit: ${{ inputs.eckit }}
     secrets: inherit
 
-  # atlas:
-  #   needs: [eckit]
-  #   if: ${{ always() && (contains(join(needs.*.result, ','), 'success') || inputs.atlas) }}
-  #   name: atlas
-  #   uses: ecmwf-enterprise-sandbox/atlas/.github/workflows/reusable-ci.yml@upstream-ci-self-hosted
-  #   with:
-  #     eckit: ${{ inputs.eckit }}
-  #   secrets: inherit
+  atlas:
+    needs: [eckit]
+    if: ${{ always() && (contains(join(needs.*.result, ','), 'success') || inputs.atlas) }}
+    name: atlas
+    uses: ecmwf-enterprise-sandbox/atlas/.github/workflows/reusable-ci.yml@upstream-ci-self-hosted
+    with:
+      eckit: ${{ inputs.eckit }}
+    secrets: inherit
 
   # mir:
   #   needs: [metkit, atlas]
