--- a/.github/workflows/upstream-ci.yml
+++ b/.github/workflows/upstream-ci.yml
@@ -18,6 +18,9 @@ on:
       mir:
         required: false
         type: string
+      pgen:
+        required: false
+        type: string
     secrets:
       PAT:
         required: true
@@ -66,15 +69,15 @@ jobs:
       atlas: ${{ inputs.atlas }}
     secrets: inherit
 
-  # pgen:
-  #   needs: [mir]
-  #   if: ${{ always() && (contains(join(needs.*.result, ','), 'success') || inputs.pgen) }}
-  #   name: pgen
-  #   uses: ecmwf-enterprise-sandbox/pgen/.github/workflows/reusable-ci.yml@upstream-ci-self-hosted
-  #   with:
-  #     eccodes: ${{ inputs.eccodes }}
-  #     eckit: ${{ inputs.eckit }}
-  #     metkit: ${{ inputs.metkit }}
-  #     atlas: ${{ inputs.atlas }}
-  #     mir: ${{ inputs.mir }}
-  #   secrets: inherit
+  pgen:
+    needs: [mir]
+    if: ${{ always() && (contains(join(needs.*.result, ','), 'success') || inputs.pgen) }}
+    name: pgen
+    uses: ecmwf-enterprise-sandbox/pgen/.github/workflows/reusable-ci.yml@upstream-ci-self-hosted
+    with:
+      eccodes: ${{ inputs.eccodes }}
+      eckit: ${{ inputs.eckit }}
+      metkit: ${{ inputs.metkit }}
+      atlas: ${{ inputs.atlas }}
+      mir: ${{ inputs.mir }}
+    secrets: inherit
