--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -26,20 +26,20 @@ on:
         required: true
 
 jobs:
-  eccodes:
-    name: eccodes
-    if: ${{ inputs.eccodes }}
-    uses: ecmwf-enterprise-sandbox/eccodes/.github/workflows/reusable-ci.yml@upstream-ci-self-hosted
-    secrets: inherit
+  # eccodes:
+  #   name: eccodes
+  #   if: ${{ inputs.eccodes }}
+  #   uses: ecmwf-enterprise-sandbox/eccodes/.github/workflows/reusable-ci.yml@upstream-ci-self-hosted
+  #   secrets: inherit
 
-  eckit:
-    name: eckit
-    if: ${{ inputs.eckit }}
-    uses: ecmwf-enterprise-sandbox/eckit/.github/workflows/reusable-ci.yml@upstream-ci-self-hosted
-    secrets: inherit
+  # eckit:
+  #   name: eckit
+  #   if: ${{ inputs.eckit }}
+  #   uses: ecmwf-enterprise-sandbox/eckit/.github/workflows/reusable-ci.yml@upstream-ci-self-hosted
+  #   secrets: inherit
 
   metkit:
-    needs: [eccodes, eckit]
+    # needs: [eccodes, eckit]
     if: ${{ always() && (contains(join(needs.*.result, ','), 'success') || inputs.metkit) }}
     name: metkit
     uses: ecmwf-enterprise-sandbox/metkit/.github/workflows/reusable-ci.yml@upstream-ci-self-hosted
@@ -48,36 +48,36 @@ jobs:
       eckit: ${{ inputs.eckit }}
     secrets: inherit
 
-  atlas:
-    needs: [eckit]
-    if: ${{ always() && (contains(join(needs.*.result, ','), 'success') || inputs.atlas) }}
-    name: atlas
-    uses: ecmwf-enterprise-sandbox/atlas/.github/workflows/reusable-ci.yml@upstream-ci-self-hosted
-    with:
-      eckit: ${{ inputs.eckit }}
-    secrets: inherit
+  # atlas:
+  #   needs: [eckit]
+  #   if: ${{ always() && (contains(join(needs.*.result, ','), 'success') || inputs.atlas) }}
+  #   name: atlas
+  #   uses: ecmwf-enterprise-sandbox/atlas/.github/workflows/reusable-ci.yml@upstream-ci-self-hosted
+  #   with:
+  #     eckit: ${{ inputs.eckit }}
+  #   secrets: inherit
 
-  mir:
-    needs: [metkit, atlas]
-    if: ${{ always() && (contains(join(needs.*.result, ','), 'success') || inputs.mir) }}
-    name: mir
-    uses: ecmwf-enterprise-sandbox/mir/.github/workflows/reusable-ci.yml@upstream-ci-self-hosted
-    with:
-      eccodes: ${{ inputs.eccodes }}
-      eckit: ${{ inputs.eckit }}
-      metkit: ${{ inputs.metkit }}
-      atlas: ${{ inputs.atlas }}
-    secrets: inherit
+  # mir:
+  #   needs: [metkit, atlas]
+  #   if: ${{ always() && (contains(join(needs.*.result, ','), 'success') || inputs.mir) }}
+  #   name: mir
+  #   uses: ecmwf-enterprise-sandbox/mir/.github/workflows/reusable-ci.yml@upstream-ci-self-hosted
+  #   with:
+  #     eccodes: ${{ inputs.eccodes }}
+  #     eckit: ${{ inputs.eckit }}
+  #     metkit: ${{ inputs.metkit }}
+  #     atlas: ${{ inputs.atlas }}
+  #   secrets: inherit
 
-  pgen:
-    needs: [mir]
-    if: ${{ always() && (contains(join(needs.*.result, ','), 'success') || inputs.pgen) }}
-    name: pgen
-    uses: ecmwf-enterprise-sandbox/pgen/.github/workflows/reusable-ci.yml@upstream-ci-self-hosted
-    with:
-      eccodes: ${{ inputs.eccodes }}
-      eckit: ${{ inputs.eckit }}
-      metkit: ${{ inputs.metkit }}
-      atlas: ${{ inputs.atlas }}
-      mir: ${{ inputs.mir }}
-    secrets: inherit
+  # pgen:
+  #   needs: [mir]
+  #   if: ${{ always() && (contains(join(needs.*.result, ','), 'success') || inputs.pgen) }}
+  #   name: pgen
+  #   uses: ecmwf-enterprise-sandbox/pgen/.github/workflows/reusable-ci.yml@upstream-ci-self-hosted
+  #   with:
+  #     eccodes: ${{ inputs.eccodes }}
+  #     eckit: ${{ inputs.eckit }}
+  #     metkit: ${{ inputs.metkit }}
+  #     atlas: ${{ inputs.atlas }}
+  #     mir: ${{ inputs.mir }}
+  #   secrets: inherit
