--- a/.github/workflows/downstream-ci-hpc.yml
+++ b/.github/workflows/downstream-ci-hpc.yml
@@ -12,6 +12,9 @@ on:
       metkit:
         required: false
         type: string
+      metkit_sha:
+        required: false
+        type: string
       atlas:
         required: false
         type: string
@@ -42,7 +45,7 @@ jobs:
     # needs: [eccodes, eckit]
     if: ${{ always() && (contains(join(needs.*.result, ','), 'success') || inputs.metkit) }}
     name: metkit
-    uses: ecmwf-enterprise-sandbox/metkit/.github/workflows/reusable-ci-hpc.yml@upstream-ci-hpc
+    uses: ecmwf/metkit/.github/workflows/reusable-ci-hpc.yml@${{ inputs.metkit_sha }}
     with:
       metkit: ${{ inputs.metkit }}
       eckit: ${{ inputs.eckit }}
