--- a/.github/workflows/downstream-ci-hpc.yml
+++ b/.github/workflows/downstream-ci-hpc.yml
@@ -23,16 +23,16 @@ jobs:
   #   uses: ecmwf-enterprise-sandbox/eccodes/.github/workflows/reusable-ci-hpc.yml@upstream-ci-hpc
   #   secrets: inherit
 
-  # eckit:
-  #   name: eckit
-  #   if: ${{ inputs.eckit }}
-  #   uses: ecmwf-enterprise-sandbox/eckit/.github/workflows/reusable-ci-hpc.yml@upstream-ci-hpc
-  #   with:
-  #     eckit: ${{ inputs.eckit }}
-  #   secrets: inherit
+  eckit:
+    name: eckit
+    if: ${{ inputs.eckit }}
+    uses: ecmwf/eckit/.github/workflows/reusable-ci-hpc.yml@develop
+    with:
+      eckit: ${{ inputs.eckit }}
+    secrets: inherit
 
   metkit:
-    # needs: [eccodes, eckit]
+    needs: [eckit] # eccodes
     if: ${{ always() && (contains(join(needs.*.result, ','), 'success') || inputs.metkit) }}
     name: metkit
     uses: ecmwf/metkit/.github/workflows/reusable-ci-hpc.yml@develop
