--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -23,14 +23,14 @@ jobs:
   #   uses: ecmwf-enterprise-sandbox/eccodes/.github/workflows/reusable-ci.yml@upstream-ci-self-hosted
   #   secrets: inherit
 
-  # eckit:
-  #   name: eckit
-  #   if: ${{ inputs.eckit }}
-  #   uses: ecmwf-enterprise-sandbox/eckit/.github/workflows/reusable-ci.yml@upstream-ci-self-hosted
-  #   secrets: inherit
+  eckit:
+    name: eckit
+    if: ${{ inputs.eckit }}
+    uses: ecmwf/eckit/.github/workflows/reusable-ci.yml@develop
+    secrets: inherit
 
   metkit:
-    # needs: [eccodes, eckit]
+    needs: [eckit] # eccodes
     if: ${{ always() && (contains(join(needs.*.result, ','), 'success') || inputs.metkit) }}
     name: metkit
     uses: ecmwf/metkit/.github/workflows/reusable-ci.yml@develop
