Fix eckit input

--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -27,6 +27,8 @@ jobs:
     name: eckit
     if: ${{ inputs.eckit }}
     uses: ecmwf/eckit/.github/workflows/reusable-ci.yml@develop
+    with:
+      eckit: ${{ inputs.eckit }}
     secrets: inherit
 
   metkit:
