Point eckit to develop branch

--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -28,7 +28,7 @@ jobs:
   eckit:
     name: eckit
     if: ${{ inputs.eckit }}
-    uses: ecmwf/eckit/.github/workflows/reusable-ci.yml@feature/downstream-ci
+    uses: ecmwf/eckit/.github/workflows/reusable-ci.yml@develop
     with:
       eckit: ${{ inputs.eckit }}
     secrets: inherit
