Point eccodes at develop branch for HPC CI too

--- a/.github/workflows/downstream-ci-hpc.yml
+++ b/.github/workflows/downstream-ci-hpc.yml
@@ -20,7 +20,7 @@ jobs:
   eccodes:
     name: eccodes
     if: ${{ inputs.eccodes }}
-    uses: ecmwf/eccodes/.github/workflows/reusable-ci-hpc.yml@feature/ci
+    uses: ecmwf/eccodes/.github/workflows/reusable-ci-hpc.yml@develop
     with:
       eccodes: ${{ inputs.eccodes }}
     secrets: inherit
