--- a/.github/workflows/downstream-ci-hpc.yml
+++ b/.github/workflows/downstream-ci-hpc.yml
@@ -7,6 +7,10 @@ on:
         description: Whether to use runner with dev version of build-package-hpc .
         required: false
         type: boolean
+      skip_matrix_jobs:
+        description: List of matrix jobs to be skipped.
+        required: false
+        type: string
       eccodes:
         required: false
         type: string
@@ -21,8 +25,49 @@ on:
         type: string
 
 jobs:
+  setup:
+    runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+      - name: Set Matrix
+        id: set-matrix
+        shell: python
+        run: |
+          import os
+          import json
+          import yaml
+
+          matrix_yaml = """
+            name:
+            - gnu
+            include:
+            - name: gnu
+              os: ubuntu-latest
+              compiler: gnu
+              compiler_cc: gcc
+              compiler_cxx: g++
+              compiler_fc: gfortran
+          """
+
+          matrix = yaml.safe_load(matrix_yaml)
+
+          skip_jobs = """${{ inputs.skip_matrix_jobs }}""".splitlines()
+          if skip_jobs:
+            matrix['name'] = [name for name in matrix['name'] if name not in skip_jobs]
+            matrix['include'] = [d for d in matrix['include'] if d['name'] not in skip_jobs]
+
+          print("Build matrix:")
+          print(yaml.dump(matrix, sort_keys=False))
+
+          with open(os.getenv("GITHUB_OUTPUT"), "a") as f:
+              print(f"matrix<<EOF", file=f)
+              print(json.dumps(matrix, separators=(',', ':')), file=f)
+              print("EOF", file=f)
+
   eccodes:
     name: eccodes
+    needs: [setup]
     if: ${{ inputs.eccodes }}
     runs-on:
       [self-hosted, linux, "${{ inputs.dev-runner && 'hpc-dev' || 'hpc' }}"]
