--- a/.github/workflows/downstream-ci-hpc.yml
+++ b/.github/workflows/downstream-ci-hpc.yml
@@ -72,7 +72,7 @@ jobs:
     runs-on:
       [self-hosted, linux, "${{ inputs.dev_runner && 'hpc-dev' || 'hpc' }}"]
     steps:
-      - uses: ecmwf-actions/build-package-hpc@feature/config-file
+      - uses: ecmwf-actions/reusable-workflows/ci-hpc@feature/hpc-action
         with:
           github_user: ${{ secrets.BUILD_PACKAGE_HPC_GITHUB_USER }}
           github_token: ${{ secrets.GH_REPO_READ_TOKEN }}
