Add other packages for full downstream

--- a/.github/workflows/downstream-ci-hpc.yml
+++ b/.github/workflows/downstream-ci-hpc.yml
@@ -82,3 +82,32 @@ jobs:
           troika_user: ${{ inputs.dev_runner && secrets.HPC_DEV_CI_SSH_USER || secrets.HPC_CI_SSH_USER }}
           repository: ${{ inputs.eccodes }}
           build_config: .github/ci-hpc-config.yml
+
+  eckit:
+    name: eckit
+    if: ${{ inputs.eckit }}
+    uses: ecmwf/eckit/.github/workflows/reusable-ci-hpc.yml@develop
+    with:
+      eckit: ${{ inputs.eckit }}
+    secrets: inherit
+
+  metkit:
+    needs: [eckit, eccodes]
+    if: ${{ always() && (contains(join(needs.*.result, ','), 'success') || inputs.metkit) }}
+    name: metkit
+    uses: ecmwf/metkit/.github/workflows/reusable-ci-hpc.yml@develop
+    with:
+      metkit: ${{ inputs.metkit }}
+      eckit: ${{ inputs.eckit }}
+      eccodes: ${{ inputs.eccodes }}
+    secrets: inherit
+
+  atlas:
+    needs: [eckit]
+    if: ${{ always() && (contains(join(needs.*.result, ','), 'success') || inputs.atlas) }}
+    name: atlas
+    uses: ecmwf/atlas/.github/workflows/reusable-ci-hpc.yml@develop
+    with:
+      atlas: ${{ inputs.atlas }}
+      eckit: ${{ inputs.eckit }}
+    secrets: inherit
