Add build matrix for self hosted runners

--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -3,6 +3,10 @@ name: downstream ci
 on:
   workflow_call:
     inputs:
+      skip_matrix_jobs:
+        description: List of matrix jobs to be skipped.
+        required: false
+        type: string
       eccodes:
         required: false
         type: string
@@ -17,6 +21,86 @@ on:
         type: string
 
 jobs:
+  setup:
+    runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+      - name: Set Matrix
+        id: set-matrix
+        shell: python
+        run: |
+          import os
+          import json
+          import yaml
+
+          matrix_yaml = """
+          name:
+          - gnu@debian-11
+          - gnu@centos-7.9
+          - gnu@rocky-8.6
+          - clang@rocky-8.6
+          - gnu@ubuntu-22.04
+          - gnu@fedora-37
+          include:
+          - name: gnu@debian-11
+            labels: [self-hosted, platform-builder-debian-11]
+            os: debian-11
+            compiler: gnu
+            compiler_cc: gcc
+            compiler_cxx: g++
+            compiler_fc: gfortran
+          - name: gnu@centos-7.9
+            labels: [self-hosted, platform-builder-centos-7.9]
+            os: centos-7.9
+            compiler: gnu
+            compiler_cc: gcc
+            compiler_cxx: g++
+            compiler_fc: gfortran
+          - name: gnu@rocky-8.6
+            labels: [self-hosted, platform-builder-rocky-8.6]
+            os: rocky-8.6
+            compiler: gnu
+            compiler_cc: gcc
+            compiler_cxx: g++
+            compiler_fc: gfortran
+          - name: clang@rocky-8.6
+            labels: [self-hosted, platform-builder-rocky-8.6]
+            os: rocky-8.6
+            compiler: clang
+            compiler_cc: clang
+            compiler_cxx: clang++
+            compiler_fc: gfortran
+          - name: gnu@ubuntu-22.04
+            labels: [self-hosted, platform-builder-ubuntu-22.04]
+            os: ubuntu-22.04
+            compiler: gnu
+            compiler_cc: gcc
+            compiler_cxx: g++
+            compiler_fc: gfortran
+          - name: gnu@fedora-37
+            labels: [self-hosted, platform-builder-fedora-37]
+            os: fedora-37
+            compiler: gnu
+            compiler_cc: gcc
+            compiler_cxx: g++
+            compiler_fc: gfortran
+          """
+
+          matrix = yaml.safe_load(matrix_yaml)
+
+          skip_jobs = """${{ inputs.skip_matrix_jobs }}""".splitlines()
+          if skip_jobs:
+            matrix['name'] = [name for name in matrix['name'] if name not in skip_jobs]
+            matrix['include'] = [d for d in matrix['include'] if d['name'] not in skip_jobs]
+
+          print("Build matrix:")
+          print(yaml.dump(matrix, sort_keys=False))
+
+          with open(os.getenv("GITHUB_OUTPUT"), "a") as f:
+              print(f"matrix<<EOF", file=f)
+              print(json.dumps(matrix, separators=(',', ':')), file=f)
+              print("EOF", file=f)
   eccodes:
     name: eccodes
     if: ${{ inputs.eccodes }}
