Move metkit to composite actions

--- a/.github/workflows/downstream-ci-hpc.yml
+++ b/.github/workflows/downstream-ci-hpc.yml
@@ -102,15 +102,25 @@ jobs:
           build_config: .github/ci-hpc-config.yml
 
   metkit:
-    needs: [eckit, eccodes]
-    if: ${{ always() && (contains(join(needs.*.result, ','), 'success') || inputs.metkit) }}
     name: metkit
-    uses: ecmwf/metkit/.github/workflows/reusable-ci-hpc.yml@develop
-    with:
-      metkit: ${{ inputs.metkit }}
-      eckit: ${{ inputs.eckit }}
-      eccodes: ${{ inputs.eccodes }}
-    secrets: inherit
+    needs: [setup, eckit, eccodes]
+    if: ${{ always() && (contains(join(needs.*.result, ','), 'success') || inputs.metkit) }}
+    strategy:
+      fail-fast: false
+      matrix: ${{ fromJson(needs.setup.outputs.matrix) }}
+    runs-on:
+      [self-hosted, linux, "${{ inputs.dev_runner && 'hpc-dev' || 'hpc' }}"]
+    steps:
+      - uses: ecmwf-actions/reusable-workflows/ci-hpc@feature/hpc-action
+        with:
+          github_user: ${{ secrets.BUILD_PACKAGE_HPC_GITHUB_USER }}
+          github_token: ${{ secrets.GH_REPO_READ_TOKEN }}
+          troika_user: ${{ inputs.dev_runner && secrets.HPC_DEV_CI_SSH_USER || secrets.HPC_CI_SSH_USER }}
+          repository: ${{ inputs.metkit }}
+          build_config: .github/ci-hpc-config.yml
+          dependencies: |
+            ${{ inputs.eckit }}
+            ${{ inputs.eccodes }}
 
   atlas:
     needs: [eckit]
