--- a/.github/workflows/downstream-ci-hpc.yml
+++ b/.github/workflows/downstream-ci-hpc.yml
@@ -23,7 +23,9 @@ on:
       atlas:
         required: false
         type: string
-
+      mir:
+        required: false
+        type: string
 jobs:
   setup:
     runs-on: ubuntu-latest
