--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -19,6 +19,9 @@ on:
       atlas:
         required: false
         type: string
+      mir:
+        required: false
+        type: string
 
 jobs:
   setup:
