--- a/.github/workflows/downstream-ci.yml
+++ b/.github/workflows/downstream-ci.yml
@@ -116,9 +116,9 @@ jobs:
     steps:
       - uses: ecmwf-actions/reusable-workflows/build-package-with-config@v2
         with:
-          repository: ${{ inputs.eccodes }}
+          repository: ${{ inputs.eccodes || 'ecmwf/eccodes@develop' }}
           build_package_inputs: |
-            repository: ${{ inputs.eccodes }}
+            repository: ${{ inputs.eccodes || 'ecmwf/eccodes@develop' }}
           build_config: .github/ci-config.yml
 
   eckit:
@@ -132,9 +132,9 @@ jobs:
     steps:
       - uses: ecmwf-actions/reusable-workflows/build-package-with-config@v2
         with:
-          repository: ${{ inputs.eckit }}
+          repository: ${{ inputs.eckit || 'ecmwf/eckit@develop' }}
           build_package_inputs: |
-            repository: ${{ inputs.eckit }}
+            repository: ${{ inputs.eckit || 'ecmwf/eckit@develop' }}
           build_config: .github/ci-config.yml
 
   metkit:
@@ -148,9 +148,9 @@ jobs:
     steps:
       - uses: ecmwf-actions/reusable-workflows/build-package-with-config@v2
         with:
-          repository: ${{ inputs.metkit }}
+          repository: ${{ inputs.metkit || 'ecmwf/metkit@develop' }}
           build_package_inputs: |
-            repository: ${{ inputs.metkit }}
+            repository: ${{ inputs.metkit || 'ecmwf/metkit@develop' }}
           build_config: .github/ci-config.yml
           build_dependencies: |
             ${{ inputs.eccodes }}
@@ -167,9 +167,9 @@ jobs:
     steps:
       - uses: ecmwf-actions/reusable-workflows/build-package-with-config@v2
         with:
-          repository: ${{ inputs.atlas }}
+          repository: ${{ inputs.atlas || 'ecmwf/atlas@develop' }}
           build_package_inputs: |
-            repository: ${{ inputs.atlas }}
+            repository: ${{ inputs.atlas || 'ecmwf/atlas@develop' }}
           build_config: .github/ci-config.yml
           build_dependencies: |
             ${{ inputs.eckit }}
@@ -185,9 +185,9 @@ jobs:
     steps:
       - uses: ecmwf-actions/reusable-workflows/build-package-with-config@v2
         with:
-          repository: ${{ inputs.mir }}
+          repository: ${{ inputs.mir || 'ecmwf/mir@develop' }}
           build_package_inputs: |
-            repository: ${{ inputs.mir }}
+            repository: ${{ inputs.mir || 'ecmwf/mir@develop' }}
           build_config: .github/ci-config.yml
           build_dependencies: |
             ${{ inputs.eccodes }}
